# pops

./: .gitignore  benchmark.py  pops.cabal
Pops/: Data.hs  GA.hs  Operators.hs  OptAi.hs  PSO.hs  Populational.hs  Rng.hs  Solution.hs
examples/: GA.hs  Hybrid.hs  OptAi.hs  PSO.hs  ParGA.hs  ParOptAi.hs  ParPSO.hs
metrics/: ga_metrics.txt  optai_metrics.txt  parga_metrics.txt  paroptai_metrics.txt  parpso_metrics.txt  pso_metrics.txt
src/: Main.hs
