name:                pops
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pops#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pso
  hs-source-dirs:      examples
  main-is:             PSO.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       pops,
                       mtl,
                       random

executable ga
  hs-source-dirs:      examples
  main-is:             GA.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       pops,
                       mtl,
                       random

executable optai
  hs-source-dirs:      examples
  main-is:             OptAi.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       pops,
                       mtl,
                       random
library
  exposed-modules: Pops.Data,
                   Pops.Operators,
                   Pops.Rng,
                   Pops.GA,
                   Pops.PSO,
                   Pops.OptAi
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5,
                 mtl,
                 random
