name:                pops
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pops#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pso
  hs-source-dirs:      examples
  main-is:             PSO.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5,
                       pops,
                       mtl,
                       parallel,
                       deepseq,
                       mersenne-random-pure64

executable ga
  hs-source-dirs:      examples
  main-is:             GA.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5,
                       pops,
                       mtl,
                       parallel,
                       deepseq,
                       mersenne-random-pure64

executable parga
  hs-source-dirs:      examples
  main-is:             ParGA.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2 -eventlog
  build-depends:       base >= 4.7 && < 5,
                       pops,
                       mtl,
                       parallel,
                       deepseq,
                       mersenne-random-pure64

executable parpso
  hs-source-dirs:      examples
  main-is:             ParPSO.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2 -eventlog
  build-depends:       base >= 4.7 && < 5,
                       pops,
                       mtl,
                       parallel,
                       deepseq,
                       mersenne-random-pure64

executable optai
  hs-source-dirs:      examples
  main-is:             OptAi.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5,
                       pops,
                       mtl,
                       parallel,
                       deepseq,
                       mersenne-random-pure64

executable hybrid
  hs-source-dirs:      examples
  main-is:             Hybrid.hs
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5,
                       pops,
                       mtl,
                       parallel,
                       deepseq,
                       mersenne-random-pure64

library
  exposed-modules: Pops.Solution,
                   Pops.Populational,
                   Pops.Rng,
                   Pops.GA,
                   Pops.PSO,
                   Pops.OptAi
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5,
                 mtl,
                 containers,
                 parallel,
                 deepseq,
                 mersenne-random-pure64

